# axon.ai

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/axon-brain/: Cargo.toml
crates/axon-brain/src/: command_agent.rs  lib.rs  profile_extractor.rs  reviewer.rs  simple_planner.rs
crates/axon-cli/: Cargo.toml
crates/axon-cli/src/: lib.rs  main.rs
crates/axon-cli/tests/: e2e_real.rs
crates/axon-core/: Cargo.toml
crates/axon-core/src/: config.rs  error.rs  lib.rs
crates/axon-dashboard/: Cargo.toml
crates/axon-dashboard/src/: lib.rs
crates/axon-dispatcher/: Cargo.toml
crates/axon-dispatcher/src/: in_process_queue.rs  lib.rs  remote_dispatcher.rs  simple_scheduler.rs  vm_registry.rs
crates/axon-isolation/: Cargo.toml
crates/axon-isolation/src/: docker.rs  firecracker.rs  lib.rs  placeholder.rs
crates/axon-isolation/tests/: firecracker_integration.rs
crates/axon-isolation/tests/fixtures/: rootfs.ext4  vmlinux
crates/axon-llm/: Cargo.toml
crates/axon-llm/src/: deepseek.rs  embedding.rs  lib.rs  openai.rs  router.rs
crates/axon-llm/tests/: deepseek_smoke.rs
crates/axon-memory/: Cargo.toml
crates/axon-memory/src/: hybrid.rs  in_memory.rs  lib.rs  qdrant_store.rs  redb_store.rs  short_term.rs
crates/axon-memory/tests/: memory_e2e.rs
crates/axon-proto/: Cargo.toml
crates/axon-proto/src/: lib.rs
crates/axon-queue/: Cargo.toml
crates/axon-queue/src/: in_process.rs  lib.rs  nats.rs  queue.rs
crates/axon-worker/: Cargo.toml
crates/axon-worker/src/: heartbeat.rs  lib.rs  worker_node.rs
docs/: product-roadmap.md  project-status.md  tech-stack.md
