[workspace]
resolver = "2"
members = [
    "crates/axon-core",
    "crates/axon-llm",
    "crates/axon-memory",
    "crates/axon-brain",
    "crates/axon-dispatcher",
    "crates/axon-isolation",
    "crates/axon-worker",
    "crates/axon-proto",
    "crates/axon-cli",
    "crates/axon-dashboard",
    "crates/axon-queue",
]

# ── Workspace metadata ────────────────────────────────────────────────
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/Summus/axon.ai"
authors = ["axon.ai contributors"]

# ── 集中管理的依赖版本 / Centralized dependency versions ──────────────
# 子 crate 通过 `dep = { workspace = true }` 引用,便于统一升级。
# 仅声明骨架阶段实际使用的依赖;后续 milestone 按需追加(qdrant-client、
# firec-rs、async-nats、tonic 等)。
[workspace.dependencies]
# 异步运行时 / async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "process", "time"] }

# 序列化 / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理 / error handling
thiserror = "1"
anyhow = "1"

# 异步 trait / async trait
async-trait = "0.1"

# HTTP 客户端 / HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Futures / stream 工具
futures = "0.3"
futures-util = "0.3"

# 日志追踪 / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置 / config
figment = { version = "0.10", features = ["toml", "env"] }
dotenvy = "0.15"
toml = "0.8"

# 标识符 / identifiers
uuid = { version = "1", features = ["v4"] }

# 向量数据库 / vector database
qdrant-client = "1.13"

# 本地嵌入式 KV / embedded KV
redb = "2.4"

# Base64 编解码 / base64 encoding
base64 = "0.22"

# 集成测试容器 / integration test containers
testcontainers = "0.23"

# 消息队列 / message broker
async-nats = "0.38"

# 临时目录 / temp directories for tests
tempfile = "3"

# CLI
clap = { version = "4", features = ["derive"] }

# Web 框架 / web framework
axum = "0.7"

# 内部 crate / internal crates (path + version, 供成员统一引用)
axon-core = { version = "0.1.0", path = "crates/axon-core" }
axon-llm = { version = "0.1.0", path = "crates/axon-llm" }
axon-memory = { version = "0.1.0", path = "crates/axon-memory" }
axon-brain = { version = "0.1.0", path = "crates/axon-brain" }
axon-dispatcher = { version = "0.1.0", path = "crates/axon-dispatcher" }
axon-isolation = { version = "0.1.0", path = "crates/axon-isolation" }
axon-worker = { version = "0.1.0", path = "crates/axon-worker" }
axon-proto = { version = "0.1.0", path = "crates/axon-proto" }
axon-queue = { version = "0.1.0", path = "crates/axon-queue" }

# ── 全局 profile 优化 ─────────────────────────────────────────────────
[profile.release]
lto = "thin"
codegen-units = 1
