[package]
name = "axon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "axon.ai 命令行控制面 / CLI control plane"

[[bin]]
name = "axon"
path = "src/main.rs"

[dependencies]
axon-core.workspace = true
axon-llm.workspace = true
axon-memory.workspace = true
axon-brain.workspace = true
axon-dispatcher.workspace = true
axon-isolation.workspace = true
axon-proto.workspace = true
axon-worker.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
e2e-real = []

[dev-dependencies]
tempfile.workspace = true
