[package]
name = "axon-dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "axon.ai Web 仪表盘后端 / Web dashboard backend (axum)"

[dependencies]
axon-core.workspace = true
axon-dispatcher.workspace = true
axon-proto.workspace = true
axon-queue.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
axum = { workspace = true }
tower-http = { workspace = true }
futures.workspace = true
reqwest.workspace = true
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
