[package]
name = "axon-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "axon.ai LLM Provider 抽象层 / LLM provider abstraction"

[dependencies]
axon-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
