[package]
name = "axon-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "axon.ai 记忆大脑 / memory brain: 短期/长期记忆与用户画像"

[dependencies]
axon-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
