[package]
name = "axon-queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axon-core.workspace = true
axon-proto.workspace = true

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

async-nats.workspace = true
futures.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tempfile.workspace = true
