[package]
name = "axon-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "axon.ai 任务执行 Worker / per-VM agent worker"

[dependencies]
axon-core.workspace = true
axon-llm.workspace = true
axon-memory.workspace = true
axon-brain.workspace = true
axon-proto.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
